Fix layout issues for map pages

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -54,7 +54,7 @@ $comment-counter: #1ef9ff;
 }
 
 body {
-    padding-top: 60px;
+    padding-top: 75px;
 }
 
 
